# Redfish_auto_test_tool

./: .gitignore  AGENTS.md  AUTH_401_SOLUTION.md  BMC-Testing-Agency.md  CONNECTION_MANAGEMENT.md  DEVELOPMENT_PLAN.md
bmc-test-automation/: README.md  debug_auth.py  direct_test.py  handover.md  pyproject.toml  pytest.ini  requirements.txt  simple_test.py
bmc-test-automation/.github/workflows/: test.yml
bmc-test-automation/config/: thresholds.yaml
bmc-test-automation/reports/html/: __init__.py  report.html  threshold_validation_results.json
bmc-test-automation/reports/pdf/: __init__.py
bmc-test-automation/src/: __init__.py  client.py
bmc-test-automation/tests/: __init__.py  conftest.py  test_ai_server_cooling.py  test_bmc_stress_and_performance.py  test_sensor_thresholds.py
doc/: GIGABYTE_Redfish_API_Spec.md
redfish_test_framework/: requirements.txt
redfish_test_framework/config/: thresholds.yaml
reports/html/: sensor_report.txt
